; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/core/extr_core.c_mmc_get_card.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/core/extr_core.c_mmc_get_card.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mmc_card = type { i32, i32 }
%struct.mmc_ctx = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mmc_get_card(%struct.mmc_card* %0, %struct.mmc_ctx* %1) #0 {
  %3 = alloca %struct.mmc_card*, align 8
  %4 = alloca %struct.mmc_ctx*, align 8
  store %struct.mmc_card* %0, %struct.mmc_card** %3, align 8
  store %struct.mmc_ctx* %1, %struct.mmc_ctx** %4, align 8
  %5 = load %struct.mmc_card*, %struct.mmc_card** %3, align 8
  %6 = getelementptr inbounds %struct.mmc_card, %struct.mmc_card* %5, i32 0, i32 1
  %7 = call i32 @pm_runtime_get_sync(i32* %6)
  %8 = load %struct.mmc_card*, %struct.mmc_card** %3, align 8
  %9 = getelementptr inbounds %struct.mmc_card, %struct.mmc_card* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.mmc_ctx*, %struct.mmc_ctx** %4, align 8
  %12 = call i32 @__mmc_claim_host(i32 %10, %struct.mmc_ctx* %11, i32* null)
  ret void
}

declare dso_local i32 @pm_runtime_get_sync(i32*) #1

declare dso_local i32 @__mmc_claim_host(i32, %struct.mmc_ctx*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
